fix(toggle): mobile label align always on right

--- a/src/toggle/toggle.css
+++ b/src/toggle/toggle.css
@@ -58,6 +58,7 @@
         }
 
         @media (--mobile) {
+            order: -1;
             margin-left: 0;
         }
     }
